test/tests/packages/lets_lambda/lambda.txt
error: package binding `lambdapkg::$f` is not a constant
 --> <packages/lambdapkg/lets.tql>:1:10
  |
1 | let $f = x => x
  |          ^^^^^^ 
  |
  = note: package `let` bindings must be constant values
